feat: UtilsTest 클래스로 Utils의 테스트 분리, 공백을 제거해주는 Utils 메서드 추가