@@ -1,5 +1,6 @@
 package lotto.util;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class Utils {
@@ -9,7 +10,21 @@ public class Utils {
 
     public static List<String> splitByComma(String input) {
         validateHasInput(input);
-        return List.of(input.split(","));
+        return Arrays.asList(removeSpace(input).split(Regex.COMMA.regex));
+    }
+
+    public static void validateHasInput(String input) {
+        if (input == null) {
+            throw new IllegalArgumentException(NULL_ERROR_MESSAGE);
+        }
+
+        if (input.isBlank()) { // "", " " : true
+            throw new IllegalArgumentException(BLANK_ERROR_MESSAGE);
+        }
+    }
+
+    public static String removeSpace(String input) {
+        return input.replaceAll(Regex.SPACE.regex, Regex.NO_SPACE.regex);
     }
 
     public static int parseInt(String input) {
@@ -26,13 +41,13 @@ public class Utils {
         }
     }
 
-    public static void validateHasInput(String input) {
-        if (input == null) {
-            throw new IllegalArgumentException(NULL_ERROR_MESSAGE);
-        }
+    private enum Regex {
+        COMMA(","), SPACE(" "), NO_SPACE("");
 
-        if (input.isBlank()) { // "", " " : true
-            throw new IllegalArgumentException(BLANK_ERROR_MESSAGE);
+        private final String regex;
+
+        Regex(String regex) {
+            this.regex = regex;
         }
     }
 }
